src/test/deca/context/valid/printPlusieursArgs.deca
{
    int a = 2;
    float b = 4;
    println(a, "Bonjour", b);
}