src/test/deca/context/invalid/while.deca
//ERROR :4:
{
        int Int=4,INT=2;
        while (Int = INT) {
              print("On boucle indéfiniment.");
        }
}